added all_funds endpoint
